--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
        rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&display=swap"
      />
+     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
