--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Soha Weding</title>
+    <title>SOHA Weeding</title>
   </head>
   <body>
     <noscript>Gửi Gắm Kỉ Niệm Trong Khung Hình</noscript>
